update project dotfiles

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-# editorconfig.org
+# http://editorconfig.org
 root = true
 
 [*]
@@ -10,6 +10,9 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.md]
+trim_trailing_whitespace = false
+
+[*.jade]
 trim_trailing_whitespace = false
 
 [*.html.twig]
