--- a/.stylelintrc
+++ b/.stylelintrc
@@ -5,28 +5,15 @@
             true,
             {
                 "ignoreAtRules": [
-                    "extend",
-                    "at-root",
-                    "debug",
-                    "warn",
-                    "error",
-                    "if",
-                    "else",
-                    "for",
-                    "each",
-                    "while",
-                    "mixin",
                     "include",
-                    "content",
-                    "return",
-                    "function"
+                    "media",
+                    "mixin"
                 ]
             }
         ],
         "color-named": "always-where-possible",
         "declaration-no-important": true,
         "indentation": 4,
-        "max-empty-lines": 2,
         "string-quotes": "single"
     }
 }
