--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,6 @@
 {
-    "extends": ["airbnb", "react-app"],
+    "extends": ["airbnb", "react-app", "prettier"],
+    "plugins": ["prettier"],
     "rules": {
         "comma-dangle": ["error", "never"],
         "import/no-unresolved": "off",
