--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,9 +25,11 @@
             "forbid": ["object"]
         }],
         "react/no-multi-comp": "off",
+        "react/jsx-one-expression-per-line": "off",
         "jsx-a11y/no-static-element-interactions": 0,
         "jsx-a11y/img-has-alt": [ 0, "Foo" ],
         "jsx-a11y/href-no-hash": "off",
+        "jsx-a11y/label-has-for": "off",
         "max-len": ["off"]
     }
 }
