--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,10 @@
 {
-    "presets": ["env", "react"]
+    "presets": [
+        "@babel/preset-env",
+        "@babel/preset-react",
+    ],
+    "plugins": [
+        "@babel/proposal-class-properties",
+        "@babel/proposal-object-rest-spread"
+    ]
 }
