--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,16 @@
 {
     "presets": [
-        "@babel/preset-env",
-        "@babel/preset-react",
+        [
+            "@babel/preset-env", {
+                "targets": ">0.25%, not op_mini all"
+            }
+        ],
+        "@babel/react"
     ],
     "plugins": [
         "@babel/proposal-class-properties",
-        "@babel/proposal-object-rest-spread"
+        "@babel/proposal-object-rest-spread",
+        "@babel/plugin-transform-runtime",
+        "@babel/plugin-syntax-dynamic-import"
     ]
 }
