--- a/configs/vscode/code.settings
+++ b/configs/vscode/code.settings
@@ -1,7 +1,7 @@
 {
     "workbench.colorTheme": "Material Theme Darker",
-    "workbench.fontAliasing": "antialiased",
-    "workbench.editor.enablePreview": false,
+    "workbench.fontAliasing": "default",
+    "workbench.editor.enablePreview": true,
     "explorer.openEditors.visible": 0,
     "npm.enableScriptExplorer": false,
     "editor.fontFamily": "Monaco",
@@ -22,12 +22,7 @@
       "**/node_modules": true,
       "**/bower_components": true
     },
-    "search.location": "panel",
     "editor.lineHeight": 15,
-    "materialTheme.cache.workbench.settings": {
-      "themeColours": "Darker",
-      "accent": "Blue"
-    },
     "workbench.colorCustomizations": {
       "activityBarBadge.background": "#2979FF",
       "list.activeSelectionForeground": "#2979FF",
@@ -44,9 +39,9 @@
     },
     "workbench.startupEditor": "none",
     "window.restoreWindows": "all",
-    "window.restoreFullscreen": true,
-    "window.title": "${folderName}${separator}${activeEditorMedium}${separator}${dirty}",
-    "window.closeWhenEmpty": true,
+    "window.restoreFullscreen": false,
+    "window.title": "${activeEditorFull}${separator}${rootName}",
+    "window.closeWhenEmpty": false,
     "editor.cursorBlinking": "phase",
     "editor.renderWhitespace": "boundary",
     "window.newWindowDimensions": "maximized",
@@ -211,5 +206,36 @@
     "[javascript]": {
       "editor.defaultFormatter": "remimarsal.prettier-now"
     },
-    "editor.renderControlCharacters": false
+    "editor.renderControlCharacters": false,
+    "editor.acceptSuggestionOnEnter": "on",
+    "editor.quickSuggestionsDelay": 50,
+    "editor.find.autoFindInSelection": true,
+    "editor.autoIndent": true,
+    "editor.emptySelectionClipboard": true,
+    "files.encoding": "utf8",
+    "editor.detectIndentation": false,
+    "editor.dragAndDrop": false,
+    "editor.renderIndentGuides": true,
+    "files.insertFinalNewline": true,
+    "editor.showFoldingControls": "mouseover",
+    "editor.find.seedSearchStringFromSelection": true,
+    "files.hotExit": "onExit",
+    "editor.wrappingIndent": "same",
+    "editor.lineNumbers": "on",
+    "editor.matchBrackets": true,
+    "editor.selectionHighlight": true,
+    "window.openFilesInNewWindow": "on",
+    "files.autoSave": "off",
+    "editor.scrollBeyondLastLine": true,
+    "editor.mouseWheelScrollSensitivity": 1,
+    "workbench.editor.tabCloseButton": "right",
+    "editor.tabCompletion": true,
+    "editor.tabSize": 4,
+    "editor.trimAutoWhitespace": true,
+    "files.trimTrailingWhitespace": true,
+    "editor.useTabStops": true,
+    "editor.wordSeparators": "./\\()\"'-:,.;<>~!@#$%^&*|+=[]{}`~?",
+    "editor.formatOnPaste": true,
+    "editor.snippetSuggestions": "top",
+    "search.enableSearchEditorPreview": true
 }
