--- a/.gitconfig
+++ b/.gitconfig
@@ -125,13 +125,13 @@
     # Speed up commands involving untracked files such as `git status`.
     # https://git-scm.com/docs/git-update-index#_untracked_cache
     untrackedCache = true
-    editor = vim
+	editor = nvim
 
 [color]
 
     # Use colors in Git commands that are capable of colored output when
     # outputting to the terminal. (This is the default setting in Git ≥ 1.8.4.)
-    ui = true
+	ui = true
 
 [color "branch"]
 
@@ -209,10 +209,12 @@
 
     insteadOf = "gist:"
 [user]
-    email = mjeightyfive@gmail.com
-    name = mjeightyfive
+	email = mjeightyfive@gmail.com
+	name = mjeightyfive
 [filter "lfs"]
     clean = git-lfs clean -- %f
     smudge = git-lfs smudge -- %f
     process = git-lfs filter-process
     required = true
+[credential]
+	helper = osxkeychain
