update vscode settings

--- a/configs/vscode/code.settings
+++ b/configs/vscode/code.settings
@@ -209,8 +209,8 @@
     "editor.renderControlCharacters": false,
     "editor.acceptSuggestionOnEnter": "on",
     "editor.quickSuggestionsDelay": 50,
-    "editor.find.autoFindInSelection": true,
-    "editor.autoIndent": true,
+    "editor.find.autoFindInSelection": "always",
+    "editor.autoIndent": "full",
     "editor.emptySelectionClipboard": true,
     "files.encoding": "utf8",
     "editor.detectIndentation": false,
@@ -222,14 +222,14 @@
     "files.hotExit": "onExit",
     "editor.wrappingIndent": "same",
     "editor.lineNumbers": "on",
-    "editor.matchBrackets": true,
+    "editor.matchBrackets": "always",
     "editor.selectionHighlight": true,
     "window.openFilesInNewWindow": "on",
     "files.autoSave": "off",
     "editor.scrollBeyondLastLine": true,
     "editor.mouseWheelScrollSensitivity": 1,
     "workbench.editor.tabCloseButton": "right",
-    "editor.tabCompletion": true,
+    "editor.tabCompletion": "on",
     "editor.tabSize": 4,
     "editor.trimAutoWhitespace": true,
     "files.trimTrailingWhitespace": true,
