--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,11 @@
 {
-    "tabWidth": 4,
+    "tabWidth": 2,
     "printWidth": 140,
     "singleQuote": true,
     "trailingComma": "none",
     "bracketSpacing": true,
     "bracketSameLine": false,
-    "semi": true,
+    "semi": false,
     "requirePragma": false,
     "proseWrap": "preserve",
     "arrowParens": "always"
