code theme and settings

--- a/configs/vscode/code.settings
+++ b/configs/vscode/code.settings
@@ -1,9 +1,8 @@
 {
-    "workbench.colorTheme": "Material Theme Darker",
+    "workbench.colorTheme": "mj",
     "workbench.fontAliasing": "default",
     "workbench.editor.enablePreview": true,
     "explorer.openEditors.visible": 0,
-    "npm.enableScriptExplorer": false,
     "editor.fontFamily": "SF Mono",
     "editor.wordWrap": "on",
     "files.exclude": {
@@ -23,20 +22,7 @@
       "**/bower_components": true
     },
     "editor.lineHeight": 15,
-    "workbench.colorCustomizations": {
-      "activityBarBadge.background": "#2979FF",
-      "list.activeSelectionForeground": "#2979FF",
-      "list.inactiveSelectionForeground": "#2979FF",
-      "list.highlightForeground": "#2979FF",
-      "scrollbarSlider.activeBackground": "#2979FF50",
-      "editorSuggestWidget.highlightForeground": "#2979FF",
-      "textLink.foreground": "#2979FF",
-      "progressBar.background": "#2979FF",
-      "pickerGroup.foreground": "#2979FF",
-      "tab.activeBorder": "#2979FF",
-      "editorWarning.foreground": "#ff0000",
-      "editorWarning.border": "#800000"
-    },
+    "editor.bracketPairColorization.enabled": false,
     "workbench.startupEditor": "none",
     "window.restoreWindows": "all",
     "window.restoreFullscreen": false,
@@ -48,112 +34,112 @@
     "workbench.editor.showIcons": false,
     "editor.multiCursorModifier": "ctrlCmd",
     "prettier.singleQuote": true,
-    "prettier.tabWidth": 4,
+    "prettier.tabWidth": 2,
     "editor.tokenColorCustomizations": {
       "textMateRules": [
         {
           "scope": [
-            "comment",
-            "comment.block",
-            "comment.block.documentation",
-            "comment.line",
-            "constant",
-            "constant.character",
-            "constant.character.escape",
-            "constant.numeric",
-            "constant.numeric.integer",
-            "constant.numeric.float",
-            "constant.numeric.hex",
-            "constant.numeric.octal",
-            "constant.other",
-            "constant.regexp",
-            "constant.rgb-value",
-            "emphasis",
-            "entity",
-            "entity.name",
-            "entity.name.class",
-            "entity.name.function",
-            "entity.name.method",
-            "entity.name.section",
-            "entity.name.selector",
-            "entity.name.tag",
-            "entity.name.type",
-            "entity.other",
-            "entity.other.attribute-name",
-            "entity.other.inherited-class",
-            "invalid",
-            "invalid.deprecated",
-            "invalid.illegal",
-            "keyword",
-            "keyword.control",
-            "keyword.operator",
-            "keyword.operator.new",
-            "keyword.operator.assignment",
-            "keyword.operator.arithmetic",
-            "keyword.operator.logical",
-            "keyword.other",
-            "markup",
-            "markup.bold",
-            "markup.changed",
-            "markup.deleted",
-            "markup.heading",
-            "markup.inline.raw",
-            "markup.inserted",
-            "markup.italic",
-            "markup.list",
-            "markup.list.numbered",
-            "markup.list.unnumbered",
-            "markup.other",
-            "markup.quote",
-            "markup.raw",
-            "markup.underline",
-            "markup.underline.link",
-            "meta",
-            "meta.block",
-            "meta.cast",
-            "meta.class",
-            "meta.function",
-            "meta.function-call",
-            "meta.preprocessor",
-            "meta.return-type",
-            "meta.selector",
-            "meta.tag",
-            "meta.type.annotation",
-            "meta.type",
-            "punctuation.definition.string.begin",
-            "punctuation.definition.string.end",
-            "punctuation.separator",
-            "punctuation.separator.continuation",
-            "punctuation.terminator",
-            "storage",
-            "storage.modifier",
-            "storage.type",
-            "string",
-            "string.interpolated",
-            "string.other",
-            "string.quoted",
-            "string.quoted.double",
-            "string.quoted.other",
-            "string.quoted.single",
-            "string.quoted.triple",
-            "string.regexp",
-            "string.unquoted",
-            "strong",
-            "support",
-            "support.class",
-            "support.constant",
-            "support.function",
-            "support.other",
-            "support.type",
-            "support.type.property-name",
-            "support.variable",
-            "variable",
-            "variable.language",
-            "variable.name",
-            "variable.other",
-            "variable.other.readwrite",
-            "variable.parameter"
-          ],
+              "comment",
+              "comment.block",
+              "comment.block.documentation",
+              "comment.line",
+              "constant",
+              "constant.character",
+              "constant.character.escape",
+              "constant.numeric",
+              "constant.numeric.integer",
+              "constant.numeric.float",
+              "constant.numeric.hex",
+              "constant.numeric.octal",
+              "constant.other",
+              "constant.regexp",
+              "constant.rgb-value",
+              "emphasis",
+              "entity",
+              "entity.name",
+              "entity.name.class",
+              "entity.name.function",
+              "entity.name.method",
+              "entity.name.section",
+              "entity.name.selector",
+              "entity.name.tag",
+              "entity.name.type",
+              "entity.other",
+              "entity.other.attribute-name",
+              "entity.other.inherited-class",
+              "invalid",
+              "invalid.deprecated",
+              "invalid.illegal",
+              "keyword",
+              "keyword.control",
+              "keyword.operator",
+              "keyword.operator.new",
+              "keyword.operator.assignment",
+              "keyword.operator.arithmetic",
+              "keyword.operator.logical",
+              "keyword.other",
+              "markup",
+              "markup.bold",
+              "markup.changed",
+              "markup.deleted",
+              "markup.heading",
+              "markup.inline.raw",
+              "markup.inserted",
+              "markup.italic",
+              "markup.list",
+              "markup.list.numbered",
+              "markup.list.unnumbered",
+              "markup.other",
+              "markup.quote",
+              "markup.raw",
+              "markup.underline",
+              "markup.underline.link",
+              "meta",
+              "meta.block",
+              "meta.cast",
+              "meta.class",
+              "meta.function",
+              "meta.function-call",
+              "meta.preprocessor",
+              "meta.return-type",
+              "meta.selector",
+              "meta.tag",
+              "meta.type.annotation",
+              "meta.type",
+              "punctuation.definition.string.begin",
+              "punctuation.definition.string.end",
+              "punctuation.separator",
+              "punctuation.separator.continuation",
+              "punctuation.terminator",
+              "storage",
+              "storage.modifier",
+              "storage.type",
+              "string",
+              "string.interpolated",
+              "string.other",
+              "string.quoted",
+              "string.quoted.double",
+              "string.quoted.other",
+              "string.quoted.single",
+              "string.quoted.triple",
+              "string.regexp",
+              "string.unquoted",
+              "strong",
+              "support",
+              "support.class",
+              "support.constant",
+              "support.function",
+              "support.other",
+              "support.type",
+              "support.type.property-name",
+              "support.variable",
+              "variable",
+              "variable.language",
+              "variable.name",
+              "variable.other",
+              "variable.other.readwrite",
+              "variable.parameter"
+            ],
           "settings": {
             "fontStyle": ""
           }
@@ -189,8 +175,7 @@
             "storage",
             "storage.modifier",
             "storage.type",
-            "variable.language",
-            "variable.parameter"
+            "variable.language"
           ],
           "settings": {
             "fontStyle": "bold"
@@ -198,13 +183,7 @@
         }
       ]
     },
-    "[scss]": {
-      "editor.defaultFormatter": "remimarsal.prettier-now"
-    },
     "prettier.useTabs": false,
-    "[javascript]": {
-      "editor.defaultFormatter": "remimarsal.prettier-now"
-    },
     "editor.renderControlCharacters": false,
     "editor.acceptSuggestionOnEnter": "on",
     "editor.quickSuggestionsDelay": 50,
@@ -213,10 +192,9 @@
     "files.encoding": "utf8",
     "editor.detectIndentation": false,
     "editor.dragAndDrop": false,
-    "editor.renderIndentGuides": true,
     "files.insertFinalNewline": true,
     "editor.showFoldingControls": "mouseover",
-    "editor.find.seedSearchStringFromSelection": true,
+    "editor.find.seedSearchStringFromSelection": "always",
     "files.hotExit": "onExit",
     "editor.wrappingIndent": "same",
     "editor.lineNumbers": "on",
@@ -228,7 +206,7 @@
     "editor.mouseWheelScrollSensitivity": 1,
     "workbench.editor.tabCloseButton": "right",
     "editor.tabCompletion": "on",
-    "editor.tabSize": 4,
+    "editor.tabSize": 2,
     "editor.trimAutoWhitespace": true,
     "files.trimTrailingWhitespace": true,
     "editor.useTabStops": true,
@@ -236,7 +214,19 @@
     "editor.formatOnPaste": true,
     "editor.snippetSuggestions": "top",
     "search.searchEditor.doubleClickBehaviour": "goToLocation",
-    "telemetry.enableCrashReporter": false,
-    "telemetry.enableTelemetry": false,
-    "editor.fontLigatures": false
+    "#telemetry.enableCrashReporter": false,
+    "#telemetry.enableTelemetry": false,
+    "editor.fontLigatures": false,
+    "workbench.iconTheme": "eq-material-theme-icons-darker",
+    "editor.inlineSuggest.enabled": true,
+    "editor.guides.indentation": true,
+    "security.workspace.trust.untrustedFiles": "open",
+    "telemetry.telemetryLevel": "off",
+    "[json]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[jsonc]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+
 }
