--- a/configs/vscode/code.settings
+++ b/configs/vscode/code.settings
@@ -228,5 +228,8 @@
     "[jsonc]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
+    "[typescriptreact]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
 
 }
